Dynamic profile is updated acc to vijay static website